# Robot-explorateur-

./: .gitignore  README.md
3D files/: Second LevelV2.dxf  Second_Level_V1.f3d  Second_Level_V2.f3d  romi-chassis-kit v1.f3d
FirstTest/: Constants.h  FirstTest.ino  Motor.cpp  Motor.h  PID.cpp  encoder.h  robot.cpp  robot.h
I2C_test/: CMakeLists.txt
I2C_test/arduino/slave_receiver/: slave_receiver.ino
I2C_test/main/: CMakeLists.txt  main.c
Lidar_module/: i2c_bus.py  rplidar.py
Locomotion_module/: PID.py  main.py  romipyb.py
Master_module/: PygameClient.py  boot.py  i2c_master.py  networks.json
MicroPython_server/: client.py  i2c_master.py  lidar_test.py  main.py  netsetup.py  rplidar.py  rplidar_backup.py  serial_test.py  server.py
MultiplexerTest/HP4067test/: HP4067test.ino
MultiplexerTest/SwitchTest/: SwitchTest.ino
Polo_power_board_shield/: Polo_power_board_shield-cache.lib  Polo_power_board_shield.sch  Polo_power_board_shield.sch-bak  fp-info-cache  fp-lib-table  sym-lib-table
Polo_power_board_shield/Pyboard/: board.lib
lidar/: i2c_bus.py  main.py  rplidar.py
pyboard/: PID.py  boot.py  main.py  motor.py  myconstants.py  romipyb.py
webServer/restful_server/: CMakeLists.txt  sdkconfig  sdkconfig.old
webServer/restful_server/front/web-demo/: Readme.md  (+1 more)
webServer/restful_server/main/: CMakeLists.txt  led_blink_task.c  main.c  main.cpp
webServer/restful_server/main/include/: rest_server.h
webServer_sdk_espressif/restful_server/: Makefile
webServer_sdk_espressif/restful_server/components/rest_server/: CMakeLists.txt  rest_server.cpp
(+31 files in other folders)
